[gd_scene load_steps=6 format=3 uid="uid://gvedu6kelbtm"]

[ext_resource type="Theme" uid="uid://3t61g0061mea" path="res://assets/theme.tres" id="1_nxwgq"]
[ext_resource type="Script" path="res://scenes/events/oracle/oracle.gd" id="2_ulinx"]
[ext_resource type="StyleBox" uid="uid://dosxsnv8rmhmx" path="res://scenes/events/event_panel_bg.tres" id="2_y1q0k"]
[ext_resource type="Texture2D" uid="uid://yjccjnomgddt" path="res://scenes/events/oracle/oracle.jpg" id="3_dq48a"]
[ext_resource type="PackedScene" uid="uid://drjdjumbfief5" path="res://cards/deck/deck_view.tscn" id="5_ure0y"]

[node name="Oracle" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_nxwgq")
script = ExtResource("2_ulinx")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("2_y1q0k")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 240)
layout_mode = 2

[node name="PanelContainer2" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/PanelContainer2"]
layout_mode = 2
texture = ExtResource("3_dq48a")
expand_mode = 3
stretch_mode = 5

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "You hear about a respected ancient oracle during your travels.

 Intrigued, you seek out this oracle, finding them nestled in the ruins of a forgotten city.

As you approach, they offer to grant you a boon: the chance to remove one card of your choice from your deck. "
horizontal_alignment = 1
autowrap_mode = 3

[node name="HSeparator" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
theme_override_constants/separation = 30
alignment = 1

[node name="PickCardButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Pick a Card"

[node name="SkipButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
text = "Skip"

[node name="DeckView" parent="." instance=ExtResource("5_ure0y")]
unique_name_in_owner = true

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/PickCardButton" to="." method="_on_pick_card_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/SkipButton" to="." method="_on_skip_button_pressed"]
